# katara

./: .env.example  .gitattributes  .gitignore  .markdownlint.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  INSTALL.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  TESTING.md  test-multi.json
.cargo/: config.toml
.github/: copilot-instructions.md
.github/agents/: distira.agent.md  katara.agent.md
.github/workflows/: ci.yml  release.yml  sync-version-badge.yml
adapters/: Cargo.toml
adapters/src/: lib.rs
benchmarks/request-latency/: results.md
benchmarks/token-reduction/: results.md
benchmarks/token-reduction/fixtures/: bench_conversation.jsonl  bench_debug_log.jsonl  bench_git_diff.jsonl
brand/: brand_guide.md
cache/: Cargo.toml  client-context.json  mcp-meta-probe.json  runtime-state.json
cache/src/: lib.rs
compiler/: Cargo.toml
compiler/src/: lib.rs  optimizer.rs  rct2i.rs
configs/policies/: policies.yaml
configs/providers/: providers.yaml
configs/routing/: routing.yaml
configs/workspace/: workspace.yaml
core/: Cargo.toml
core/src/: main.rs
dashboard/ui-vue/: index.html  package-lock.json  package.json  vite.config.ts
dashboard/ui-vue/public/: manifest.json
dashboard/ui-vue/src/: App.vue  env.d.ts
dashboard/ui-vue/src/components/: AreaChart.vue  EfficiencyGauge.vue  FlowVisualizer.vue  MetricCard.vue  SparklineChart.vue  SvgIcon.vue  TvChart.vue
dashboard/ui-vue/src/router/: index.ts
dashboard/ui-vue/src/store/: metrics.ts
dashboard/ui-vue/src/styles/: theme.css
dashboard/ui-vue/src/utils/: providers.ts
dashboard/ui-vue/src/views/: AuditView.vue  BenchmarksView.vue  FlowView.vue  GuideView.vue  InsightsView.vue  MemoryView.vue  OverviewView.vue  ProvidersView.vue  SavingsView.vue
deployments/docker/: .dockerignore  Dockerfile
deployments/helm/: Chart.yaml
deployments/kubernetes/: deployment.yaml  service.yaml
docs/: ai-flow-visualizer.md  api-reference.md  architecture.md  benchmarking.md  branding.md  context-budget-compiler.md  context-memory-lensing.md
examples/basic-openai-client/: README.md
examples/hybrid-cloud-routing/: README.md
examples/ollama-local-routing/: README.md
fingerprint/: Cargo.toml
fingerprint/src/: lib.rs
katara/: LICENSE  README.md  ROADMAP.md
mcp/: distira-server.mjs  katara-server.mjs  package-lock.json  package.json  test-mcp.mjs
memories/repo/: facts.md
memory/: Cargo.toml
memory/src/: lib.rs
metrics/: Cargo.toml
metrics/src/: lib.rs
router/: Cargo.toml
router/src/: lib.rs
scripts/: bootstrap-win.ps1  bootstrap.sh  resolve-upstream-context.ps1  set-upstream-context.ps1  start-win.ps1  start.sh  test-api.ps1  test-e2e.ps1
tokenizer/: Cargo.toml
tokenizer/src/: lib.rs
tools/: create-katara-v6.7.ps1
