[workspace]
members = [
  "core",
  "compiler",
  "memory",
  "router",
  "adapters",
  "metrics",
  "cache",
  "fingerprint",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/katara-project/katara"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
