[workspace]
members = [
  "core",
  "compiler",
  "memory",
  "router",
  "adapters",
  "metrics",
  "cache",
  "fingerprint",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
repository = "https://github.com/katara-project/katara"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tower-http = { version = "0.5", features = ["cors"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
