[package]
name = "adapters"
description = "Provider-specific HTTP clients (Ollama, OpenAI, Mistral, Gemini)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
