[package]
name = "compiler"
description = "Context Budget Compiler — reduces raw context to minimal useful tokens"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokenizer = { path = "../tokenizer" }
