[package]
name = "core"
description = "KATARA gateway bootstrap and API entry point"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
axum = "0.7"
tokio = { workspace = true }
tokio-stream = { workspace = true }
tower-http = { workspace = true }
compiler = { path = "../compiler" }
memory = { path = "../memory" }
router = { path = "../router" }
adapters = { path = "../adapters" }
metrics = { path = "../metrics" }
fingerprint = { path = "../fingerprint" }
cache = { path = "../cache" }
