[package]
name = "core"
description = "DISTIRA gateway bootstrap and API entry point"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
# Enable exact GPT-4 token counting via the embedded tiktoken cl100k_base vocabulary.
# Enabled by default — adds ~5 MB to the binary but gives zero-error GPT-4 counts.
default = ["exact-gpt4"]
exact-gpt4 = ["tokenizer/exact-gpt4"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
axum = "0.7"
tokio = { workspace = true }
tokio-stream = { workspace = true }
tower-http = { workspace = true }
tokenizer = { path = "../tokenizer" }
futures-util = { workspace = true }
compiler = { path = "../compiler" }
memory = { path = "../memory" }
router = { path = "../router" }
adapters = { path = "../adapters" }
metrics = { path = "../metrics" }
fingerprint = { path = "../fingerprint" }
cache = { path = "../cache" }
